[package]
name = "homebrew-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "2.0.0"
crossterm = "0.26.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
subprocess = "0.2.9"
tui = "0.19.0"
